--- a/app/views/families/_password_form.html.erb
+++ b/app/views/families/_password_form.html.erb
@@ -2,8 +2,9 @@
   <%= f.error_notification %>
   <div class="row">
     <div class="form-inputs">
-      <%= f.input :family_name, label_html: { class: 'active' } %>
-      <%= f.input :parent_first_name, label_html: { class: 'active' } %>
+      <%= f.input :password, label_html: { class: 'active' } %>
+      <%= f.input :password_confirmation, label_html: { class: 'active' } %>
+      </br>
     </div>
   </div>
   <div class="row">
@@ -12,6 +13,3 @@
     </div>
   </div>
 <% end %>
-
-
-
