--- a/app/views/home/_admin_home.html.erb
+++ b/app/views/home/_admin_home.html.erb
@@ -6,36 +6,24 @@
     </div>
 </section>
 
+  <div class="col s12">  
+      <h2 class="center">Camps per Week</h2>
+    <%= line_chart Camp.group("date(camps.start_date)").count %>
+  </div>
+    
 
-<h2 class="header center">Your Week</h2>
+
+
+<h2 class="header center">The Week Ahead</h2>
 <div class="row">
+  
+  
+  
   <div class="col s6">
     <div class="card blue darken-1">
       <div class="card-content white-text">
-        <span class="card-title">Camps</span>
+        <span class="card-title">Active Camps this Week</span>
           <%= pie_chart Curriculum.current.group(:name).count, donut: true, messages: {empty: "No data"} %>
-          <table>
-          <thead>
-            <tr>
-              <th>Name</th>
-              <th>Max Capacity</th>
-              <th>Enrolled Students</th>
-              <th colspan="3"></th>
-            </tr>
-          </thead>
-        
-          <tbody>
-            <% for camp in Camp.all do %>
-                <% if camp.start_date <= Date.today && camp.end_date >= Date.today %>
-                  <tr>
-                    <td color="Black"><%= link_to camp.name, camp %></td>
-                    <td><%= camp.max_students %></td>
-                    <td><%= camp.registrations.size %></td>
-                  </tr>
-                <% end %>  
-            <% end %>
-          </tbody>
-        </table>
       </div>
       <div class="card-action">
         <%= link_to 'Manage Camps', camps_path, :class=>"btn waves-effect waves-light gradient-45deg-red-pink mt-2 btn-small z-depth-5" %>
@@ -45,7 +33,7 @@
   <div class="col s6">
     <div class="card blue-grey darken-1">
       <div class="card-content white-text">
-        <span class="card-title">Instructor's Camps</span>
+        <span class="card-title">Camps per Instructor</span>
         <%= column_chart Instructor.current.group(:first_name, :last_name).count, donut: true, messages: {empty: "No data"} %>
       </div>
       <div class="card-action">
@@ -59,78 +47,46 @@
 
 
 <div class="row">
-    <div class="col">  
-        <h2 class="center">A brief history of CASHMONEYPROFIT</h2>
-      <%= line_chart Camp.group("date(camps.start_date)").count %>
-    </div>
-</div>
-
-
-
-<div class="row">
-<div class="col s12">
-<h2 class="header">This Week's Profit</h2>
-<div class="card horizontal">
-  <div class="card-stacked">
-    <div class="card-content">
-      <h2 class="center"><%= weekly_profit %></h2>
-    </div>
-    <div class="card-action">
-      <%= link_to 'Manage Camps', camps_path, :class=>"btn waves-effect waves-light blue" %>
-    </div>
-  </div>
-</div>
-</div>
-
-
-<div class="col s12 m7">
-<h2 class="header">Horizontal Card</h2>
-<div class="card horizontal">
-  <div class="card-stacked">
-    <div class="card-content">
-      <h2 class="center">A pie chart</h2>
-      <%= pie_chart Curriculum.group(:camp).count %>
-    </div>
-    <div class="card-action">
-      <%= link_to 'Manage Camps', camps_path, :class=>"btn waves-effect waves-light blue" %>
-    </div>
-  </div>
-</div>
-</div>
-
-
-        
-        
-<div class="col s12 m7">
-<h2 class="header">This week</h2>
-<div class="card horizontal">
-  <div class="card-stacked">
-    <div class="card-content">
-      <table>
-      <thead>
-        <tr>
-          <th>Name</th>
-          <th>Max Capacity</th>
-          <th>Enrolled Students</th>
-          <th colspan="3"></th>
-        </tr>
-      </thead>
     
-      <tbody>
-        <% for camp in Camp.all do %>
-            <% if camp.start_date <= Date.today && camp.end_date >= Date.today %>
-              <tr>
-                <td ><%= link_to camp.name, camp, {:style=>'color:blue;'}%></td>
-                <td><%= camp.max_students %></td>
-                <td><%= camp.registrations.size %></td>
-              </tr>
-            <% end %>  
-        <% end %>
-      </tbody>
-    </table>
+  <div class="col s12">
+  <div class="card horizontal">
+    <div class="card-stacked">
+      <div class="card-content">
+        <h4 class="center"><%= "Weekly Profit: #{weekly_profit}" %></h4>
+      </div>
+      <div class="card-action">
+      <table>
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th>Cost</th>
+            <th>Max Capacity</th>
+            <th>Enrolled Students</th>
+            <th>Instructors</th>
+            <th colspan="3"></th>
+          </tr>
+        </thead>
+      
+        <tbody>
+          <% for camp in Camp.all do %>
+              <% if camp.start_date <= Date.today && camp.end_date >= Date.today %>
+                <tr>
+                  <td><%= link_to camp.name, camp, {:style=>'color:blue;'}%></td>
+                  <td><%= number_to_currency(camp.cost) %></td>
+                  <td><%= camp.max_students %></td>
+                  <td><%= camp.registrations.size %></td>
+                  <td><%= camp.instructors.size %></td>
+                </tr>
+              <% end %>  
+          <% end %>
+        </tbody>
+      </table>
 
+
+      </div>
+    </div>
   </div>
-</div>
-</div>
-</div>
+  </div>
+    
+
 </div>
