--- a/app/views/home/_family_home.html.erb
+++ b/app/views/home/_family_home.html.erb
@@ -6,32 +6,31 @@
     </div>
 </section>
 
+<h2 class="header center">Your Week</h2>
 <div class="row">
-    <div class="col s6">
-    <div class="card blue-grey darken-1">
-      <div class="card-content white-text">
-        <span class="card-title">Students</span>
-        <%= column_chart current_user.family.students.group(:first_name, :last_name).count, donut: true, messages: {empty: "No data"} %>
-      </div>
-      <div class="card-action">
-        <%= link_to 'Manage Instructors', instructors_path, :class=>"btn waves-effect waves-light gradient-45deg-red-pink mt-2 btn-small z-depth-5" %>
-      </div>
-    </div>
-    </div>
-    </div>
-    
-    <div class="col s6">
-    <div class="card blue-grey darken-1">
+  <div class="col s6">
+    <div class="card blue darken-1">
       <div class="card-content white-text">
         <span class="card-title">Camps</span>
-        <%= pie_chart current_user.family.registration_number.count, donut: true, messages: {empty: "No data"} %>
+          <%= column_chart current_user.family.students.group(:first_name, :last_name).count, donut: true, messages: {empty: "No data"} %>
+      </div>
+      <div class="card-action">
+         <%= link_to 'My Family', family_path(current_user.family.id), :class=>"btn waves-effect waves-light gradient-45deg-red-pink mt-2 btn-small z-depth-5" %>
+      </div>
+    </div>
+  </div>
+  <div class="col s6">
+    <div class="card blue-grey darken-1">
+      <div class="card-content white-text">
+        <span class="card-title">Upcoming Camps</span>
+         <%= pie_chart current_user.family.students.group(:first_name, :last_name).registrations.count, donut: true, messages: {empty: "No data"} %>
       </div>
       <div class="card-action">
         <%= link_to 'Manage Students', students_path, :class=>"btn waves-effect waves-light gradient-45deg-red-pink mt-2 btn-small z-depth-5" %>
       </div>
     </div>
-    </div>
-    </div>
+  </div>
 </div>
 
-<%= pie_chart current_user.family.registration_number %>
+
+<%# pie_chart current_user.family.registration_number %>
