--- a/app/views/instructors/show.html.erb
+++ b/app/views/instructors/show.html.erb
@@ -12,7 +12,8 @@
     <%= render :partial => "partials/object_options", locals: {model_name: "instructor", object: @instructor} %>
     <% if can? :edit, Instructor %>
         <%= link_to(eval("edit_instructor_password_path(@instructor)"), class: 'waves-effect waves-light btn') do %>
-            &nbsp;<%= "Edit " %>
+            &nbsp;<%= "Edit Password" %>
+            <%= render :partial => "password_form", locals: {model_name: "instructor", object: @instructor} %>
         <% end %>
         &nbsp;&nbsp;
     <% end %>
