--- a/app/views/locations/_locations_list.html.erb
+++ b/app/views/locations/_locations_list.html.erb
@@ -31,3 +31,6 @@
   <span class="paginate">
     <%= will_paginate locations, :previous_label => "Previous&nbsp;", :next_label => "&nbsp;Next" %>
   </span>
+  
+</div>
+</div>
