--- a/app/views/partials/_nav_parent.html.erb
+++ b/app/views/partials/_nav_parent.html.erb
@@ -8,8 +8,8 @@
           <li><%= link_to "Curriculums", curriculums_path %></li>
           <li><%= link_to "Camps", camps_path %></li> 
           <li><%= link_to "Locations", locations_path %></li> 
-        <ul class="right">
           <li><%= link_to "Cart", carts_path %></li> 
+        <ul class="right">
           <li><%= link_to 'Logout', logout_path %></li>
         </ul>
         </ul>
@@ -18,6 +18,7 @@
           <li><%= link_to "Curriculums", curriculums_path %></li>
           <li><%= link_to "Camps", camps_path %></li> 
           <li><%= link_to "Locations", locations_path %></li> 
+          <li><%= link_to "Cart", carts_path %></li> 
           <li><%= link_to 'Logout', logout_path %></li>
         </ul>
         </div>
