everything works? Maybe?

--- a/app/assets/stylesheets/overrides.scss
+++ b/app/assets/stylesheets/overrides.scss
@@ -72,3 +72,19 @@ nav a.button-collapse {
 .best_in_place:hover {
   background-color:#eeeeee;
 }
+
+
+
+.demo-container {
+    width: 100%;
+    max-width: 350px;
+    margin: 50px auto;
+}
+form {
+    margin: 30px;
+}
+input {
+    width: 200px;
+    margin: 10px auto;
+    display: block;
+}
