--- a/app/views/partials/_object_options.html.erb
+++ b/app/views/partials/_object_options.html.erb
@@ -13,6 +13,14 @@
       &nbsp;&nbsp;
   <% end %>
 
+  <% if (model_name == "family" || model_name == "instructor") %>
+      <%= link_to(eval("edit_#{model_name}_password_path(object)"), class: 'waves-effect waves-light btn') do %>
+          &nbsp;<%= "Edit Password" %>
+      <% end %>
+      &nbsp;&nbsp;
+  <% end %>
+  
+
   <% if can? :destroy, model_name.capitalize %>
     <%= link_to(eval("#{model_name}_path(object)"), method: 'delete', data: {confirm: "Are you sure you want to permanently delete #{opt}"}, class: 'waves-effect waves-light btn btn-alert') do %>
         &nbsp;<%= "Delete #{opt}" %>
