Standardized a few buttons

--- a/app/views/curriculums/index.html.erb
+++ b/app/views/curriculums/index.html.erb
@@ -31,4 +31,4 @@
 
     <% end %>
 
-<%= link_to 'New curriculum', new_curriculum_path %>
+<%= link_to 'New curriculum', new_curriculum_path, :class=>"btn waves-effect waves-light gradient-45deg-red-pink mt-2 btn-small z-depth-5" %>
