--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -36,6 +36,6 @@
     <% end %>
 
 <% if can? :create, Student %>
-  <td><%= link_to 'New student', new_student_path, :class=>"btn waves-effect waves-light blue" %></td>
+  <td><%= link_to 'New student', new_student_path, :class=>"btn waves-effect waves-light gradient-45deg-red-pink mt-2 btn-small z-depth-5" %></td>
 <% end %>
 
