--- a/app/views/families/index.html.erb
+++ b/app/views/families/index.html.erb
@@ -36,5 +36,5 @@
     <% end %>
 
 <% if can? :create, Family %>
-  <td><%= link_to 'New family', new_family_path, :class=>"btn waves-effect waves-light blue" %></td>
+  <td><%= link_to 'New family', new_family_path, :class=>"btn waves-effect waves-light gradient-45deg-red-pink mt-2 btn-small z-depth-5" %></td>
 <% end %>
