--- a/app/views/partials/_index_structure.html.erb
+++ b/app/views/partials/_index_structure.html.erb
@@ -13,10 +13,12 @@
   <br></br>
   <div class="col s3 center">
     <!-- Add a button for new instances of object -->
+  <% if can? :create, model_name.capitalize %>
     <%= link_to(eval("new_#{model_name}_path"), class: "btn waves-effect waves-light gradient-45deg-red-pink mt-2 btn-small z-depth-5") do %>
       <!-- <i class="fa fa-plus"></i> -->
       &nbsp;Add a New <%= model_name.capitalize %>
     <% end %>
+  <% end %>
   </div>
 </div>
 
