--- a/app/views/camps/show.html.erb
+++ b/app/views/camps/show.html.erb
@@ -3,7 +3,7 @@
     <%= render :partial => "camp_details" %>
   </div>
   <div class="col s5">
-    <% if can? :read, Instructor %>
+    <% if ! current_user.nil? && current_user.role == "admin" %>
       <%= render :partial => "camp_instructors_vue"%>
     <% end %> 
     <% if ! current_user.nil? && (current_user.role == "parent" ||  current_user.role == "admin") %>
