redid some stylez

--- a/app/views/camps/_camp_instructors.html.erb
+++ b/app/views/camps/_camp_instructors.html.erb
@@ -1,5 +1,5 @@
 <div class="col s12">
-<div class="card indigo lighten-2">
+<div class="card" style="background-color: #e1484f">
   <div class="card-content white-text">
     <span class="card-title">Camp Instructors</span>
 	  <% if @instructors.empty? %>
