--- a/app/views/camps/_camp_instructors_vue.html.erb
+++ b/app/views/camps/_camp_instructors_vue.html.erb
@@ -1,6 +1,6 @@
 <div id="assignments">
   <%= hidden_field_tag "camp_id", @camp.id %>
-  <div class="card indigo lighten-2">
+  <div class="card" style="background-color: #e1484f">
     <div class="card-content white-text">
       <span class="card-title">Camp Instructors</span>
       <% if @camp.instructors.empty? %>
