--- a/app/views/camps/_camp_students_vue.html.erb
+++ b/app/views/camps/_camp_students_vue.html.erb
@@ -1,7 +1,7 @@
 <div id="registrations">
 <div class="col s12">
   <%= hidden_field_tag "camp_id", @camp.id %>
-  <div class="card indigo lighten-2">
+  <div class="card" style="background-color: #e1484f">
     <div class="card-content white-text">
       <span class="card-title">Registered Students</span>
       <% if @camp.students.empty? %>
