--- a/app/views/camps/_form_for_admin.html.erb
+++ b/app/views/camps/_form_for_admin.html.erb
@@ -2,7 +2,7 @@
   <%= f.error_notification %>
   <div class="row">
     <div class="form-inputs">
-        <% if Student.active.at_or_above_rating(@camp.curriculum.min_rating).below_rating(@camp.curriculum.max_rating).alphabetical.size == 0 %>
+        <% if Student.active.at_or_above_rating(@camp.curriculum.min_rating).below_rating(@camp.curriculum.max_rating).alphabetical.not_for_camp(@camp).size == 0 %>
             <section class="hero is-info welcome is-small" style="background:#f48fb1">
                 <div class="container-large">
                   <h5 class="title center">
@@ -11,14 +11,14 @@
                 </div>
             </section>
         <% else %>
-          <%= f.input :student_id, collection: Student.active.at_or_above_rating(@camp.curriculum.min_rating).below_rating(@camp.curriculum.max_rating).alphabetical.to_a, include_blank: true %>
+          <%= f.input :student_id, collection: Student.active.at_or_above_rating(@camp.curriculum.min_rating).below_rating(@camp.curriculum.max_rating).alphabetical.not_for_camp(@camp).to_a, include_blank: true %>
         <% end %>  
       
       <%= f.input :camp_id, as: :hidden, input_html: { value: @camp.id } %>
     </div>
   </div>
   <div class="row">
-    <% if Student.active.at_or_above_rating(@camp.curriculum.min_rating).below_rating(@camp.curriculum.max_rating).alphabetical.size > 0 %>
+    <% if Student.active.at_or_above_rating(@camp.curriculum.min_rating).below_rating(@camp.curriculum.max_rating).alphabetical.not_for_camp(@camp).size > 0 %>
         <div class="form-actions col s8">
           <%= f.button :submit %>
         </div>
