--- a/app/views/families/_students_list.html.erb
+++ b/app/views/families/_students_list.html.erb
@@ -1,4 +1,4 @@
-<div class="card indigo lighten-2">
+<div class="card" style="background-color: #e1484f">
   <div class="card-content white-text">
     <span class="card-title"> Students </span>
     <% if @students.empty? %>
