--- a/app/views/home/_test_home.html.erb
+++ b/app/views/home/_test_home.html.erb
@@ -31,22 +31,22 @@
     </ul>
   </div>
   
+</br></br>
   
-<body class="fullscreen">
-  <div class="section no-pad-bot" id="index-banner">
-    <div class="container">
-      <br><br>
-      <h1 class="header center wide orange-text">Starter Template</h1>
-      <div class="row center">
-        <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
+<div class="card" style="background-color:#6513df">
+  <div class="card-content white-text">
+      <div class="section no-pad-bot" id="index-banner">
+        <div class="container">
+          <h1 class="header center wide">Alex and Mark's Chess Camps</h1>
+          <div class="row center">
+            <a href="<%= new_family_path %>" id="download-button" class="btn pulse waves-effect waves-light gradient-45deg-red-pink mt-2 btn-large z-depth-2">Get Started</a>
+          </div>
+        </div>
       </div>
-      <div class="row center">
-        <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light orange">Get Started</a>
-      </div>
-      <br><br>
-
     </div>
   </div>
+</div>
+
 
 
   <div class="container">
@@ -54,35 +54,34 @@
 
       <!--   Icon Section   -->
       <div class="row">
-        <div class="col s12 m4">
+        <div class="col s12">
           <div class="icon-block">
-            <h2 class="center light-blue-text"><i class="material-icons">flash_on</i></h2>
-            <h5 class="center">Speeds up development</h5>
+            <h2 class="center light-blue-text"><i class="material-icons">library_books</i></h2>
+            <h5 class="center">Curriculum Variety</h5>
 
-            <p class="light">We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components. Additionally, we refined animations and transitions to provide a smoother experience for developers.</p>
+            <p class="light" align="center">Every student is individual - the diverse curriculums at A&M chess camps offer a breadth of material, for beginners and experts alike.</p>
           </div>
         </div>
 
-        <div class="col s12 m4">
+        <div class="col s12">
           <div class="icon-block">
             <h2 class="center light-blue-text"><i class="material-icons">group</i></h2>
-            <h5 class="center">User Experience Focused</h5>
+            <h5 class="center">Experienced Staff</h5>
 
-            <p class="light">By utilizing elements and principles of Material Design, we were able to create a framework that incorporates components and animations that provide more feedback to users. Additionally, a single underlying responsive system across all platforms allow for a more unified user experience.</p>
+            <p class="light" align="center">A&M instructors are USCF certified professionals, with top-notch chess skills, with copious experience teaching students of all ages.</p>
           </div>
         </div>
 
-        <div class="col s12 m4">
+        <div class="col s12">
           <div class="icon-block">
             <h2 class="center light-blue-text"><i class="material-icons">settings</i></h2>
-            <h5 class="center">Easy to work with</h5>
+            <h5 class="center">Advanced Metrics</h5>
 
-            <p class="light">We have provided detailed documentation as well as specific code examples to help new users get started. We are also always open to feedback and can answer any questions a user may have about Materialize.</p>
+            <p class="light" align="center">With personalized analytics for every student, your parent account enables you to see points earned, progress over time, and keep tabs on enrollments.</p>
           </div>
         </div>
       </div>
 
     </div>
-    <br><br>
   </div>
- </body>
+ 
