--- a/app/views/partials/_camps_list.html.erb
+++ b/app/views/partials/_camps_list.html.erb
@@ -1,4 +1,4 @@
-<div class="card indigo lighten-2">
+<div class="card" style="background-color: #d13f7c">
   <div class="card-content white-text">
     <span class="card-title"><%= state %> Camps</span>
     <% if camps.empty? %>
