--- a/app/views/camps/_camp_details.html.erb
+++ b/app/views/camps/_camp_details.html.erb
@@ -1,4 +1,4 @@
-<div class="card indigo lighten-2">
+<div class="card" style="background-color: #d13f7c">
   <div class="card-content white-text">
   Camp Details
     <span class="card-title"><%=@camp.curriculum.name%></span>
@@ -17,8 +17,8 @@
   </div>
   <div class="card-action">
     <% if can? :update, Camp %>
-      <%= link_to 'Edit', edit_camp_path(@camp), :class=>"btn waves-effect waves-light gradient-45deg-red-pink mt-2 btn-small z-depth-5" %>
+      <%= link_to 'Edit', edit_camp_path(@camp), :class=>"btn waves-effect waves-light gradient-45deg-red-pink mt-2 btn-small z-depth-2" %>
     <% end %>
-    <%= link_to 'Back', camps_path, :class=>"btn waves-effect waves-light gradient-45deg-red-pink mt-2 btn-small z-depth-5" %>
+    <%= link_to 'Back', camps_path, :class=>"btn waves-effect waves-light gradient-45deg-red-pink mt-2 btn-small z-depth-2" %>
   </div>
 </div>
