--- a/app/views/camps/_inactive_camps.html.erb
+++ b/app/views/camps/_inactive_camps.html.erb
@@ -1,37 +1,49 @@
 <% if @inactive_camps.empty? %>
-  <h4>There are no inactive camps at this time.</h4>
+  <h3>There are no inactive camps in the system at this time</h3>
 <% else %>
-  <h3>Inactive Camps</h3>
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Start Date</th>
-      <th>Time Slot</th>
-      <th>Max Students</th>
-      <th>Remaining Slots</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+  <h3 align="left">Inactive Camps</h3>
 
-  <tbody>
     <% @inactive_camps.each do |camp| %>
-      <tr>
-        <td><%= link_to camp.curriculum.name, camp %></td>
-        <td><%= camp.start_date.strftime("%m/%d/%y") %></td>
-        <td><%= camp.time_slot == "am" ? "Morning" : "Afternoon" %></td>
-        <td><%= camp.max_students %></td>
-        <td><%= camp.max_students - camp.registrations.count %></td>
-        <% if can? :update, Camp %>
-          <%= link_to 'Edit', edit_camp_path(camp), :class=>"btn waves-effect waves-light gradient-45deg-red-pink mt-2 btn-small z-depth-5" %>
-        <% end %>
-      </tr>
+    <div class="col s6">
+      <div class="card" style="background-color: #6513df">
+        <div class="card-content white-text">
+          <span class="card-title"><%= link_to camp.curriculum.name, camp %></span>
+            <table>
+              <thead>
+                <tr>
+                  <th>Start Date</th>
+                  <th>Time Slot</th>
+                  <th>Max Capacity</th>
+                  <th>Remaining Slots</th>
+                  <td>
+                    <% if can? :update, Camp %>
+                      <%= "Options" %>
+                    <% end %>
+                  </td>
+                </tr>
+              </thead>
+                
+              <tbody>
+                <tr>
+                  <td><%= camp.start_date.strftime("%m/%d/%y") %></td>
+                  <td><%= camp.time_slot == "am" ? "Morning" : "Afternoon" %></td>
+                  <td><%= camp.max_students %></td>
+                  <td><%= camp.max_students - camp.registrations.count %></td>
+                  <td>
+                    <% if can? :update, Camp %>
+                      <%= link_to 'Edit', edit_camp_path(camp), :class=>"btn waves-effect waves-light gradient-45deg-red-pink mt-2 btn-small z-depth-2" %>
+                    <% end %>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+        </div>
+      </div>
+    </div>
     <% end %>
-  </tbody>
-</table>
-
 <% end %>
 
 <span class="paginate">
   <%= will_paginate @inactive_camps, :previous_label => "Previous&nbsp;", :next_label => "&nbsp;Next", :param_name => 'inactive_camps' %>
 </span>
+
