--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -7,7 +7,7 @@
 <!--</head>-->
 <body>
   <% if @cart.empty? %>
-    <section class="hero is-info welcome is-small" style="background:#64ffda">
+    <section class="hero is-info welcome is-small" style="background:#6513df">
         <div class="container-large">
           <h1 class="title center">
             <%= "Your cart is empty."  %>
@@ -16,10 +16,11 @@
     </section>  
   <% end %>
 
+
 <% if ! @cart.empty? %>
   <div class="row">
     <div class="col s6">
-      <div class="card blue darken-1">
+      <div class="card" style="background-color:#e1484f">
         <div class="card-content white-text">
           <span class="card-title">Cart</span>
           
@@ -53,7 +54,7 @@
         </div>
       </div>
       
-      <section class="hero is-info welcome is-small" style="background:#64ffda">
+      <section class="hero is-info welcome is-small" style="background:#d13f7c">
         <div class="container-large">
           <h1 class="title center">
             <%= "Total: #{number_to_currency(@total_price)}"  %>
@@ -64,7 +65,7 @@
     </div>
 
     <div class="col s6">
-      <div class="card blue-grey darken-1">
+      <div class="card" style="background-color: #6513df">
         <div class="card-content white-text">
           <span class="card-title">Payment</span>
             
