--- a/app/views/families/_family_details.html.erb
+++ b/app/views/families/_family_details.html.erb
@@ -3,7 +3,16 @@
 <h5>Basic Information</h5>
 <p><strong>Parent First Name: </strong><%= @family.parent_first_name %></p>
 <p><strong>Parent Phone: </strong><%= number_to_phone @family.phone %></p>
-<p><strong>Parent Email: </strong><%= @family.email %></p>
+<p>
+  <strong>Parent Email:</strong>
+  <% if ! current_user.nil? and (current_user.role == "admin" || current_user.role == "parent") %>
+    <%= best_in_place @family, :email, as: :input %>
+  <% else %>
+    <%= @family.email %>
+  <% end %>
+</p>
+
+
 <p><strong>Active:</strong>
   <%= @family.active ? "Yes" : "No" %>
 </p>
