--- a/app/views/home/_family_home.html.erb
+++ b/app/views/home/_family_home.html.erb
@@ -1,4 +1,4 @@
-<section class="hero is-info welcome is-small" style="background:#64ffda">
+<section class="hero is-info welcome is-small" style="background:#6513df">
     <div class="container-large">
       <h1 class="title center">
         <%= "Hello, #{current_user.family.parent_first_name}" %>
@@ -9,24 +9,24 @@
 <h2 class="header center">Your Week</h2>
 <div class="row">
   <div class="col s6">
-    <div class="card blue darken-1">
+    <div class="card" style="background-color: #d13f7c">
       <div class="card-content white-text">
         <span class="card-title">Camps</span>
           <%= column_chart current_user.family.students.group(:first_name, :last_name).count, donut: true, messages: {empty: "No data"} %>
       </div>
       <div class="card-action">
-         <%= link_to 'My Family', family_path(current_user.family.id), :class=>"btn waves-effect waves-light gradient-45deg-red-pink mt-2 btn-small z-depth-5" %>
+         <%= link_to 'My Family', family_path(current_user.family.id), :class=>"btn waves-effect waves-light gradient-45deg-red-pink mt-2 btn-small z-depth-2" %>
       </div>
     </div>
   </div>
   <div class="col s6">
-    <div class="card blue-grey darken-1">
+    <div class="card" style="background-color: #e1484f">
       <div class="card-content white-text">
         <span class="card-title">Upcoming Camps</span>
          <%= pie_chart current_user.family.students.group(:registrations, :first_name, :last_name).count, donut: true, messages: {empty: "No data"} %>
       </div>
       <div class="card-action">
-        <%= link_to 'Manage Students', students_path, :class=>"btn waves-effect waves-light gradient-45deg-red-pink mt-2 btn-small z-depth-5" %>
+        <%= link_to 'Manage Students', students_path, :class=>"btn waves-effect waves-light gradient-45deg-red-pink mt-2 btn-small z-depth-2" %>
       </div>
     </div>
   </div>
