--- a/app/views/home/_instructor_home.erb
+++ b/app/views/home/_instructor_home.erb
@@ -1,4 +1,4 @@
-<section class="hero is-info welcome is-small" style="background:#f71d65">
+<section class="hero is-info welcome is-small" style="background:#97AFC5">
     <div class="container-wide">
       <h1 class="title center">
         <%= "Hello, #{current_user.instructor.proper_name}" %>
@@ -14,32 +14,36 @@
     <div class="card-stacked">
       <div class="card-content">
           <h2 class="header" align="center">Camps to teach this Week</h2>
-        <table>
-        <thead>
-          <tr>
-            <th>Name</th>
-            <th>Max Capacity</th>
-            <th>Enrolled Students</th>
-            <th>Instructors</th>
-            <th>Location</th>
-            <th colspan="3"></th>
-          </tr>
-        </thead>
-      
-        <tbody>
-          <% for camp in current_user.instructor.camps.current.alphabetical do %>
-              <% if camp.start_date <= Date.today && camp.end_date >= Date.today %>
-                <tr>
-                  <td ><%= link_to camp.name, camp, {:style=>'color:blue;'}%></td>
-                  <td><%= camp.max_students %></td>
-                  <td><%= camp.registrations.size %></td>
-                  <td><%= camp.instructors.size %></td>
-                  <td><%= link_to camp.location.name, location_url(camp.location), {:style=>'color:blue;'} %></td>
-                </tr>
-              <% end %>  
-          <% end %>
-        </tbody>
-      </table>
+          <% if current_user.instructor.camps.current.alphabetical.size > 0 %>
+            <table>
+            <thead>
+              <tr>
+                <th>Name</th>
+                <th>Max Capacity</th>
+                <th>Enrolled Students</th>
+                <th>Instructors</th>
+                <th>Location</th>
+                <th colspan="3"></th>
+              </tr>
+            </thead>
+          
+            <tbody>
+              <% for camp in current_user.instructor.camps.current.alphabetical do %>
+                  <% if camp.start_date <= Date.today && camp.end_date >= Date.today %>
+                    <tr>
+                      <td ><%= link_to camp.name, camp, {:style=>'color:blue;'}%></td>
+                      <td><%= camp.max_students %></td>
+                      <td><%= camp.registrations.size %></td>
+                      <td><%= camp.instructors.size %></td>
+                      <td><%= link_to camp.location.name, location_url(camp.location), {:style=>'color:blue;'} %></td>
+                    </tr>
+                  <% end %>  
+              <% end %>
+            </tbody>
+          </table>
+        <% else %>
+          <h4 align="center">No camps to show.</h4>
+        <% end %>
   
     </div>
   </div>
