--- a/app/views/instructors/_form.html.erb
+++ b/app/views/instructors/_form.html.erb
@@ -2,7 +2,6 @@
   <%= f.error_notification %>
   <div class="row">
     <div class="form-inputs">
-      <%= f.input :username, label_html: { class: 'active' } %>
       <%= f.input :email, label_html: { class: 'active' } %>
       <%= f.input :phone, label_html: { class: 'active' } %>
       <%= f.input :first_name, label_html: { class: 'active' } %>
@@ -14,7 +13,7 @@
       <% if (current_user.role?(:admin) || current_user.role?(:instructor)) %>
         <div class="field">
           <%= f.label :photo %><br />
-          <%= f.file_field :photo %>
+          <%= f.file_field :photo,  required: true, multiple: true, name: 'picture' %>
         </div>
       <% end %>
     </div>
