--- a/app/views/instructors/_instructor_details.html.erb
+++ b/app/views/instructors/_instructor_details.html.erb
@@ -4,9 +4,36 @@
 <% unless @instructor.photo_url.nil? %>
 <p><%= image_tag @instructor.photo_url %></p>
 <% end %>
-<p><strong>Bio: </strong><%= @instructor.bio %></p>
-<p><strong>Email: </strong><%= @instructor.email %></p>
-<p><strong>Phone: </strong><%= number_to_phone @instructor.phone %></p>
+
+<p>
+  <strong>Description:</strong>
+  <% if ! current_user.nil? and (current_user.role == "admin" || current_user.role == "instructor") %>
+    <%= best_in_place @instructor, :bio, as: :textarea %>
+  <% else %>
+    <%= @instructor.bio %>
+  <% end %>
+</p>
+
+<p>
+  <strong>Email:</strong>
+  <% if ! current_user.nil? and (current_user.role == "admin" || current_user.role == "instructor") %>
+    <%= best_in_place @instructor, :email, as: :input %>
+  <% else %>
+    <%= @instructor.email %>
+  <% end %>
+</p>
+
+<p>
+  <strong>Phone:</strong>
+  <% if ! current_user.nil? and (current_user.role == "admin" || current_user.role == "instructor") %>
+    <%= best_in_place @instructor, :phone, as: :input, :display_with => :number_to_phone, :helper_options => { :area_code => true } %>
+  <% else %>
+    <%= number_to_phone (@instructor.phone) %>
+  <% end %>
+</p>
+
+
+
 <p><strong>Active:</strong>
   <%= @instructor.active ? "Yes" : "No" %>
 </p>
