--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -22,20 +22,20 @@
         <td><%= student.rating %></td>
         <td><%= student.registrations.size %></td>
         <% if can? :update, Student %>
-          <td><%= link_to 'Edit', edit_student_path(student), :class=>"btn waves-effect waves-light gradient-45deg-red-pink mt-2 btn-small z-depth-5" %></td>
+          <td><%= link_to 'Edit', edit_student_path(student), :class=>"btn waves-effect waves-light gradient-45deg-red-pink mt-2 btn-small z-depth-2" %></td>
         <% end %>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<span class="paginate">
+<h5 class="paginate">
   <%= will_paginate @students, :previous_label => "Previous&nbsp;", :next_label => "&nbsp;Next", :param_name => 'students' %>
-</span>
+</h5>
 
     <% end %>
 
 <% if can? :create, Student %>
-  <td><%= link_to 'New student', new_student_path, :class=>"btn waves-effect waves-light gradient-45deg-red-pink mt-2 btn-small z-depth-5" %></td>
+  <td><%= link_to 'New student', new_student_path, :class=>"btn waves-effect waves-light gradient-45deg-red-pink mt-2 btn-small z-depth-2" %></td>
 <% end %>
 
