--- a/app/views/families/_students_list.html.erb
+++ b/app/views/families/_students_list.html.erb
@@ -15,11 +15,20 @@
             <tr>
               <td><%= link_to student.proper_name, student_path(student) %></td>
               <td><%= student.rating %></td>
-              <td><%= link_to student.registrations.size, student_path(student) %></td>
-              <td>&nbsp;<%= link_to student.camps.upcoming.first.start_date.strftime("%m/%d/%y"), camp_path(student.camps.upcoming.first) %></td>
+              <td><%= student.registrations.size %></td>
+              <td>&nbsp;
+                <% if student.camps.size > 1 %>
+                  <%= link_to student.camps.upcoming.first.start_date.strftime("%m/%d/%y"), camp_path(student.camps.upcoming.first) %>
+                <% end %>
+              </td>
             </tr>
           <% end %>
       </table>
     <% end %>
+    <% if can? :create, Student %>
+      <div class="card-action" style="red">
+        <%= link_to "Add a new student", new_student_path() %>
+    <% end %>
+
   </div>
 </div>
