--- a/app/views/camps/_form_for_parent.html.erb
+++ b/app/views/camps/_form_for_parent.html.erb
@@ -3,7 +3,7 @@
 <div class="row">
   <div class="form-inputs">
     <% if current_user.role == "parent" %>
-        <% if current_user.family.students.at_or_above_rating(@camp.curriculum.min_rating).below_rating(@camp.curriculum.max_rating).alphabetical.not_for_camp(@camp).size == 0 %>
+        <% if current_user.family.students.at_or_above_rating(@camp.curriculum.min_rating).below_rating(@camp.curriculum.max_rating).alphabetical.not_for_date(@camp.start_date, @camp.time_slot).size == 0 %>
             <section class="hero is-info welcome is-small" style="background:#f48fb1">
                 <div class="container-large">
                   <h5 class="title center">
@@ -12,7 +12,7 @@
                 </div>
             </section>
         <% else %>
-          <%= f.input :student_id, collection: current_user.family.students.at_or_above_rating(@camp.curriculum.min_rating).below_rating(@camp.curriculum.max_rating).alphabetical.not_for_camp(@camp).to_a, include_blank: true %>
+          <%= f.input :student_id, collection: current_user.family.students.at_or_above_rating(@camp.curriculum.min_rating).below_rating(@camp.curriculum.max_rating).alphabetical.not_for_date(@camp.start_date, @camp.time_slot).to_a, include_blank: true %>
         <% end %>  
     <% end %>
     <%= f.input :camp_id, as: :hidden, input_html: { value: @camp.id } %>
@@ -21,7 +21,7 @@
   </div>
 </div>
 <div class="row">
-<% if current_user.family.students.at_or_above_rating(@camp.curriculum.min_rating).below_rating(@camp.curriculum.max_rating).alphabetical.not_for_camp(@camp).size > 0 %>
+<% if current_user.family.students.at_or_above_rating(@camp.curriculum.min_rating).below_rating(@camp.curriculum.max_rating).alphabetical.not_for_date(@camp.start_date, @camp.time_slot).size > 0 %>
   <div class="form-actions col s8">
     <%= f.button :submit, :url => add_to_cart_path, :method => :get  %>
   </div>
