Make sure instructors partial only lets you add instructors if the collection size is greater than 0

--- a/app/views/camps/_camp_student_form_template.html.erb
+++ b/app/views/camps/_camp_student_form_template.html.erb
@@ -5,7 +5,7 @@
   <% @student = nil %> 
   <div class="row">
     <div class="col">
-      <h5>New Student:</h5>
+      <h5>Add Student:</h5>
       
       <% if current_user.role == "parent" %>
         <%= render partial: "form_for_parent" %>
