--- a/app/views/camps/_camp_instructor_form_template.html.erb
+++ b/app/views/camps/_camp_instructor_form_template.html.erb
@@ -5,19 +5,33 @@
   <!-- now the form template itself -->
   <div class="row">
     <div class="col">
-      <h5>New Instructor:</h5>
+      <h5>Add Instructor:</h5>
       <%= simple_form_for(@camp_instructor) do |f| %>
         <%= f.error_notification %>
         <div class="row">
           <div class="form-inputs">
-            <%= f.input :instructor_id, collection: Instructor.active.alphabetical.not_for_camp(@camp).to_a, include_blank: true %>
-            <%= f.input :camp_id, as: :hidden, input_html: { value: @camp.id } %>
+          <% if current_user.role == "admin" %>
+              <% if Instructor.active.alphabetical.not_for_date(@camp.start_date, @camp.time_slot).size == 0 %>
+                  <section class="hero is-info welcome is-small" style="background:#f48fb1">
+                      <div class="container-large">
+                        <h5 class="title center">
+                          <%= "No eligible instructors" %>
+                        </h5>
+                      </div>
+                  </section>
+              <% else %>
+                <%= f.input :instructor_id, collection: Instructor.active.alphabetical.not_for_date(@camp.start_date, @camp.time_slot).to_a, include_blank: true %>
+                <%= f.input :camp_id, as: :hidden, input_html: { value: @camp.id } %>
+              <% end %>
+            <% end %>
           </div>
         </div>
         <div class="row">
+        <% if Instructor.active.alphabetical.not_for_date(@camp.start_date, @camp.time_slot).size > 0 %>
           <div class="form-actions col s8">
             <%= f.button :submit %>
           </div>
+        <% end %>
         </div>
       <% end %>
     </div>
