--- a/app/views/instructors/_instructor_fields.html.erb
+++ b/app/views/instructors/_instructor_fields.html.erb
@@ -4,7 +4,6 @@
 <%= f.input :active, label_html: { class: 'active' }  %>
 <% if (current_user.role?(:admin) || current_user.role?(:instructor)) %>
 <div class="field">
-  <%= f.label :photo %><br />
-  <%= f.file_field :photo %>
+    <%= f.input :photo, as: :file  %>
 </div>
 <% end %>
