--- a/app/views/families/change_pass.html.erb
+++ b/app/views/families/change_pass.html.erb
@@ -1,5 +1,7 @@
 <h1>Editing Family Password</h1>
 
-<%= render 'password_form', instructor: @family %>
+<% @user = @family.user %>
+
+<%= render 'password_form', user: @user %>
 
 <%= link_to 'Back', @family %>
