--- a/app/views/instructors/change_pass.html.erb
+++ b/app/views/instructors/change_pass.html.erb
@@ -1,5 +1,6 @@
 <h1>Editing Instructor Password</h1>
+<% @user = @instructor.user %>
 
-<%= render 'password_form', instructor: @instructor %>
+<%= render 'password_form', user: @user %>
 
 <%= link_to 'Back', @instructor %>
